styles/globals.scss
html,
body {
  padding: 0;
  margin: 0;
  width: 100%;
  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

header {
  background-color: #061021;
  min-height: 5rem;
}

main {
  background: linear-gradient(180deg, #061021 0%, #0b2041 100%);
  min-height: calc(100vh - (50px + 2rem));

  display: grid;
}

.pointer {
  cursor: pointer;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: white;
}

p {
  color: lightgrey;
}

h1 {
  font-weight: 600;
  font-size: 3.75em;
  line-height: 110%;
  max-width: 18ch;
}

button {
  border: none;
  background: #5700c6;
  border-radius: 0.8rem;
  color: white;
  padding: 1rem 1.4rem;
  font-weight: 600;
  font-size: 1rem;
  cursor: pointer;

  &:hover {
    box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.25);
    transition: ease-in-out 200ms;
  }
}

.invisible {
  display: none;
}

.error {
  color: #eb4545;
}

.truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

